--- a/Metrics.ipynb
+++ b/Metrics.ipynb
@@ -225,7 +225,7 @@
    "source": [
     "### 1. Accuracy \n",
     "\n",
-    "Accuracy is defined as the number of true positives divided by the total number of true positives and true negatives:\n",
+    "Accuracy is defined as the number of true positives plus true negatives divided by the total number of examples in the dataset:\n",
     "\n",
     "Accuracy = $\\frac{TP + TN}{TP + TN + FP + FN}$"
    ]
